--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.0.0-beta.53",
+    "@payloadcms/next": "^3.0.0-beta.53",
+    "@payloadcms/plugin-cloud": "^3.0.0-beta.53",
+    "@payloadcms/richtext-lexical": "^3.0.0-beta.53",
+    "@payloadcms/storage-s3": "^3.0.0-beta.53",
+    "graphql": "^16.8.1",
+    "next": "14.2.4",
+    "payload": "^3.0.0-beta.53",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5"
   }
 }
